syntax = "proto3";
package clusteringress.solo.io;
option go_package = "github.com/solo-io/gloo/projects/clusteringress/pkg/api/v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;
import "google/protobuf/any.proto";

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";
/*
@solo-kit:resource.short_name=cig
@solo-kit:resource.plural_name=clusteringresses

A simple wrapper for a kNative ClusterIngress Object.
*/
message ClusterIngress{
    // a raw byte representation of the cluster ingress this resource wraps
    google.protobuf.Any cluster_ingress_spec = 1;

    // a raw byte representation of the ingress status of the cluster ingress object
    google.protobuf.Any cluster_ingress_status = 2 [(core.solo.io.skip_hashing) = true];

    // Metadata contains the object metadata for this resource
    core.solo.io.Metadata metadata = 7 [(gogoproto.nullable) = false];
}
